// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create LinkToLDAPProviderModal should search for groups with no results found 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey700 StyledProps--padding-medium"
      >
        common.filters.noResultsFound
      </p>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render error 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main container shrink layoutErrorMessage StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
        >
          <div
            class="StyledProps--font StyledProps--main scroll"
          >
            <div
              class="Layout--vertical StyledProps--main shrink"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                <span
                  class="StyledProps--font StyledProps--main text StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
                >
                  api call resulted in error
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render error 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main container shrink layoutErrorMessage StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
        >
          <div
            class="StyledProps--font StyledProps--main scroll"
          >
            <div
              class="Layout--vertical StyledProps--main shrink"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                <span
                  class="StyledProps--font StyledProps--main text StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
                >
                  api call resulted in error
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render table 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header TableV2--minimal"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 40%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              name
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 45%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              description
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              members
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--minimal"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 40%;"
              >
                <div
                  class="wrapper"
                >
                  <label
                    class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ldap_usergroup
                  </label>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 45%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  tagGroup
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render table 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header TableV2--minimal"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 40%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              name
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 45%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              description
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              members
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--minimal"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 40%;"
              >
                <div
                  class="wrapper"
                >
                  <label
                    class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ldap_usergroup
                  </label>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 45%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  tagGroup
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
